# aiclimate-template

./: AUTHORS.md  HISTORY.md  LICENSE  MANIFEST.in  README.md  __main__.py  justfile  pyproject.toml
.github/workflows/: pip-publish.yml
aiclimate/: __init__.py  __main__.py  cli.py  config.py  environment.py  find.py  generate.py  hooks.py  log.py  main.py  prompt.py  replay.py  repository.py  utils.py  vcs.py  zipfile.py
aiclimate/_builtin_template/: aiclimate.json
aiclimate/_builtin_template/hooks/: post_gen_project.py
aiclimate/_builtin_template/{{aiclimate.project_slug}}/: .gitignore  .python-version  README.md  justfile  pyproject.toml
aiclimate/_builtin_template/{{aiclimate.project_slug}}/.github/workflows/: ci.yml
aiclimate/_builtin_template/{{aiclimate.project_slug}}/configs/: default.yaml
aiclimate/_builtin_template/{{aiclimate.project_slug}}/notebooks/: 01_exploration.ipynb
aiclimate/_builtin_template/{{aiclimate.project_slug}}/src/{{aiclimate.package_name}}/: __init__.py  config.py  evaluate.py  predict.py  train.py
aiclimate/_builtin_template/{{aiclimate.project_slug}}/tests/: test_placeholder.py
docs/: conf.py
tests/: conftest.py  test_abort_generate_on_hook_error.py  test_cli.py  test_cookiecutter_invocation.py  test_cookiecutter_local_no_input.py  test_cookiecutter_local_with_input.py  test_cookiecutter_nested_templates.py  test_custom_extensions_in_hooks.py  test_default_extensions.py  test_environment.py  test_exceptions.py  test_find.py  test_generate_context.py  test_generate_copy_without_render.py  test_generate_copy_without_render_override.py  test_generate_file.py  test_generate_files.py  test_generate_hooks.py  test_get_config.py  test_get_user_config.py  test_hooks.py  test_log.py  test_main.py  test_output_folder.py  test_pre_prompt_hooks.py  test_prompt.py  test_read_repo_password.py  test_read_user_choice.py  test_read_user_dict.py  test_read_user_variable.py  test_read_user_yes_no.py  test_repo_not_found.py  test_specify_output_dir.py  test_templates.py  test_time_extension.py  test_utils.py
tests/replay/: conftest.py  test_dump.py  test_load.py  test_replay.py
tests/repository/: test_abbreviation_expansion.py  test_determine_repo_dir_clones_repo.py  test_determine_repo_dir_finds_existing_cookiecutter.py  test_determine_repo_dir_finds_subdirectories.py  test_determine_repository_should_use_local_repo.py  test_is_repo_url.py  test_repository_has_cookiecutter_json.py
tests/test-config/: config-expand-user.yaml  config-expand-vars.yaml  invalid-config-w-multiple-docs.yaml  invalid-config.yaml  valid-config.yaml
tests/test-extensions/local_extension/local_extensions/: main.py
tests/vcs/: test_clone.py  test_identify_repo.py  test_is_vcs_installed.py
tests/zipfile/: test_unzip.py
