[project]
name = "aiclimate"
version = "0.1.0"
description = "A CLI tool that scaffolds Python ML/data science projects for AI in climate and environmental sciences research."
readme = "README.md"
authors = [{ name = "AI for Climate and Environmental Sciences" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
keywords = [
    "aiclimate",
    "machine-learning",
    "climate-science",
    "project-template",
    "scaffolding",
    "environmental-science",
    "data-science",
]
dependencies = [
    "binaryornot>=0.4.4",
    "Jinja2>=2.7,<4.0.0",
    "click>=7.0,<9.0.0",
    "pyyaml>=5.3.1",
    "python-slugify>=4.0.0",
    "requests>=2.23.0",
    "arrow",
    "rich",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/aiclimate/aiclimate"

[project.scripts]
aiclimate = "aiclimate.__main__:main"

[dependency-groups]
dev = [
    "uv",                       # Is needed by justfile tasks
    "rust-just>=1.42.3",        # Justfile tasks
    { include-group = "test" }, # test runner and helpers
]

docs = [
    "sphinx",
    "sphinx_click",
    "myst_parser",
    "sphinx_autodoc_typehints",
    "sphinxcontrib.apidoc",
    "sphinx_rtd_theme",
    "sphinx-autobuild",
]

test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "freezegun",
]

lint = [
    "ruff",
    "safety",
]

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-vvv --cov-report term-missing --cov=aiclimate"

[tool.doc8]
ignore = ["D001"]

[tool.ruff]

target-version = "py310"
extend-exclude = ["aiclimate/_builtin_template"]

[tool.ruff.lint]

select = [
    "A", # flake8-builtins
    "ARG",   # flake8-unused-arguments
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "E",   # pycodestyle errors
    "EM",  # flake8-errmsg
    "EXE", # flake8-executable
    "F",   # pyflakes
    "FA",  # flake8-future-annotations
    "FLY",  # flynt
    "FURB", # refurb
    "I",    # isort
    "ICN",  # flake8-import-conventions
    "INT",  # flake8-gettext
    "ISC",  # implicit-str-concat
    "LOG",  # flake8-logging
    "N",    # pep8-naming
    "PERF", # perflint
    "PGH",  # pygrep-hooks
    "PIE",  # flake8-pie
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",  # Ruff-specific lints
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
    "SLOT", # flake8-slots
    "TCH", # flake8-type-checking
    "TID", # ban relative imports
    "TRY", # tryceratops
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
    "YTT", # flake8-2020
]

ignore = [
    "B028",   # No explicit `stacklevel` keyword argument found
    "COM812", # ignore when using ruff-format
    "G004",   # Logging statement uses f-string
    "ISC001", # ignore when using ruff-format
    "N818",   # Exception name should be named with an Error suffix
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
    "S404",   # `subprocess` module is possibly insecure
    "TC003",  # Ignore request to put Iterable into TYPE CHECKING block
]

exclude = ["tests/**/hooks/*"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D104", # Missing docstring in public package
    "D200", # One-line docstring should fit on one line with quotes
    "S101", # use of assert
    "S603", # `subprocess` call: check for execution of untrusted input"
    "S106", # Possible hardcoded password assigned to argument: "password"
    "S108", # Probable insecure usage of temporary file or directory: "/tmp"
]
"aiclimate/*" = [
    "S603", # `subprocess` call: check for execution of untrusted input"
]
"docs/conf.py" = ["A001", "D100"]

[tool.ruff.format]

quote-style = "preserve"
exclude = ["tests/hooks-abort-render/hooks/*"]


[tool.mypy]
strict = true
show_error_codes = true
files = ["aiclimate", "tests"]
exclude = "(?x)(/hooks/ | tests/test-output-folder/)"
no_implicit_reexport = true


[[tool.mypy.overrides]]
module = [
    "aiclimate.prompt",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
disable_error_code = ["no-untyped-def"]

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:"]

[tool.coverage.run]
omit = [
    "aiclimate/__main__.py",
]

[tool.uv]
package = true

[tool.setuptools]
packages = ["aiclimate"]

[tool.setuptools.package-data]
aiclimate = ["VERSION.txt", "_builtin_template/**/*", "_builtin_template/**/.*"]
